@@ -7,7 +7,7 @@ Standards-Version: 3.7.2
 
 Package: anste
 Architecture: all
-Depends: perl (>=5.8.8-7), liberror-perl (>=0.15-8), libxml-dom-perl (>=1.43-4), libfile-copy-recursive-perl (>=0.29-1), libsoap-lite-perl (>=0.69-1), libperl6-slurp-perl (>=0.03-5), kvm, ubuntu-vm-builder, libconfig-tiny-perl (>=2.08-1), libperl6-junction-perl (>= 1.10-1), libterm-readline-gnu-perl (>= 1.16-2), libmail-rfc822-address-perl (>=0.3-2), libtext-template-perl (>= 1.44-1.1), debootstrap (>=1.0.8), libvirt-bin (>= 0.4), libyaml-libyaml-perl
+Depends: perl (>=5.8.8-7), liberror-perl (>=0.15-8), libxml-dom-perl (>=1.43-4), libfile-copy-recursive-perl (>=0.29-1), libsoap-lite-perl (>=0.69-1), libperl6-slurp-perl (>=0.03-5), kvm, ubuntu-vm-builder, libconfig-tiny-perl (>=2.08-1), libperl6-junction-perl (>= 1.10-1), libterm-readline-gnu-perl (>= 1.16-2), libmail-rfc822-address-perl (>=0.3-2), libtext-template-perl (>= 1.44-1.1), debootstrap (>=1.0.8), libvirt-bin (>= 0.4), libyaml-libyaml-perl, libjson-xs-perl, sshpass
 Recommends: recordmydesktop (>=0.3.5.1-1)
 Description: Advanced Network Service Testing Environment
  ANSTE is a testing environment for advanced network services, mainly intended
