@@ -1,4 +1,5 @@
 HEAD
+    + New anste-connect tool to easily SSH into deployed hosts
     + Avoid negative MAC address error
     + More logs when verbosity is on: test commands and threads wait
     + Bugfix: dist value in anste.conf is no longer ignored
